# MODNet

./: pyproject.toml
modnet/torchscript/: modnet_torchscript.py
